--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "openai": "4.44.1"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "openai": "latest"
   }
 }
